--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb+srv://full_stack_zach:attack1993@cluster0-azqkn.mongodb.net/note-app?retryWrites=true&w=majority
 PORT=3003
+TEST_MONGODB_URI=mongodb+srv://full_stack_zach:attack1993@cluster0-azqkn.mongodb.net/blog-test?retryWrites=true&w=majority
+SECRET=runthemjewelsfast
